# quickstart-ray-serve

./: README.md  app.py  pyproject.toml  ray-service.yml
