[project]
name = "ray-serve-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114.1",
    "ray[serve]>=2.35.0",
    "torch>=2.4.1",
    "transformers>=4.44.2",
]

[tool.pyright]
exclude = [
  ".venv",
]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
]
